# AxumTutorial

./: README.md  docker-compose.yml
app/: Cargo.toml  Dockerfile
app/src/: main.rs
app/src/handlers/: mod.rs
app/src/serializers/: mod.rs
app/templates/: index.html
